# CommanderChrisNext

./: .gitignore  Cargo.toml  README.md  tasks.md
.cursor/rules/: rust-developer.mdc  rust-optimization.mdc
.github/: changelog-configuration.json
.github/hooks/: pre-commit
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml
src/: cli.rs  config_manager.rs  error.rs  lib.rs  main.rs  personalization.rs  util.rs
src/api_client/: client.rs  mod.rs  models.rs
tests/: integration_tests.rs
