[package]
name = "chris"
version = "0.1.0"
edition = "2021"
authors = ["Chris Team"]
description = "A terminal-based interface for querying GPT models"
repository = "https://github.com/markorenic/CommanderChrisNext"
license = "MIT"
readme = "README.md"
keywords = ["cli", "gpt", "assistant", "terminal"]
categories = ["command-line-utilities", "api-bindings"]

# Optimize binary size in release mode
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Optimize compile time in debug mode
[profile.dev]
opt-level = 0
debug = true

[dependencies]
# CLI Arguments and REPL
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0"

# API Client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Configuration
config = "0.13"
dirs = "5.0"
toml = "0.8"

# System Information and Personalization
sysinfo = "0.30.5"
whoami = "1.4"

# Error Handling and Logging
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
term_size = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
mockito = "1.2"
dotenv = "0.15"
